___________________________________
|      |  |  |     |  _  |     |  |
|  |___|  |  |  |  |    _|  |  |  |    GNU GLOBAL source code tag system
|  |   |  |  |  |  |     |     |  |
|  ~~  |   ~~|     |  ~  |  |  |   ~~|          for all hackers.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Copyright (c) 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009,
	2010, 2011, 2012, 2013
	Tama Communications Corporation

 This file is free software; as a special exception the author gives
 unlimited permission to copy and/or distribute it, with or without
 modifications, as long as this notice is preserved.

 This program is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

		----------------------------------

ChangeLog about GNU GLOBAL

December 18 2013, Shigio YAMAGUCHI

	The following paths were removed from the candidate list of configuration file.

	/etc/global.conf (OLD_GTAGSCONF)
	/etc/gtags/global.conf (OLD_DEBIANCONF)

	These paths were not documented once.

November 17 2013, Shigio YAMAGUCHI

	Added two functions: copyfile(), copydirectory(). They remove the necessity
	of external command 'cp'.

June 17 2013, Shigio YAMAGUCHI

	Dependence to dbop.c module was eliminated from assoc.c module.

June 12 2013, Shigio YAMAGUCHI

	File 'HTML/sitekey' (--system-cgi option) was removed since it is unnecessary.

December 11 2012, Shigio YAMAGUCHI

	Some automake macros were changed as follows to avoid warning messages.
	o INCLUDES was changed to AM_CPPFLAGS
	o AC_PROG_RANLIB was removed.

December 3 2012, Shigio YAMAGUCHI

	[global/literal.c]
	Included fgrep's code of 4.3BSD.

October 20 2012, Shigio YAMAGUCHI

	Added support for type string of ctags.
	Configure script detects whether ctags has --gtags option or not.
	However, I don't know whether the ctags which has this option will be released.
